--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="/style.css"/>   
     <title>contact</title>
 </head>
 <body>
@@ -34,6 +35,9 @@
 <h1 class="mt-5">Contact Us</h1>
 <h2>for croissanty chats</h2>
 </br>
-Email: <a href="#">letschatcroissants@pastrypals.com</a>
+<div class="email">
+ ✉️ <a href="#"> letschatcroissants@pastrypals.com</a>
+</div>
+
 </body>
 </html>
