--- a/photo.html
+++ b/photo.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/style.css"/>
     <title>photo</title>
 </head>
 <body>
@@ -33,7 +34,7 @@
 </br>
 <h1 class="mt-5">Gallery of Goodness</h1>
 
-<div class="container">
+<div class="container mt-5">
     <div class="row">
         <div class="col-md-4">
             <img src="/images/c4.png" class="img-fluid rounded p-2 border">
