--- a/photo.html
+++ b/photo.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pictures of delicious croissants with multiple fillings">"
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/style.css"/>
-    <title>photo</title>
+    <title>Photos of delicious croissants | Pastry Pals </title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -33,17 +34,18 @@
 </nav>
 </br>
 <h1 class="mt-5">Gallery of Goodness</h1>
+<h2> Croissant pictures that look good enough to eat!</h2>
 
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-4">
-            <img src="/images/c4.png" class="img-fluid rounded p-2 border">
+            <img src="/images/c4.png" alt="delicious savoury filled croissant" class="img-fluid rounded p-2 border">
         </div>
         <div class="col-md-4">
-            <img src="/images/c1.jpeg" class="img-fluid rounded p-2 border">
+            <img src="/images/c1.jpeg" alt="tasty butter croissants" class="img-fluid rounded p-2 border">
         </div>
         <div class="col-md-4">
-            <img src="/images/c2.png" class="img-fluid rounded p-2 border">
+            <img src="/images/c2.png" alt="yummy jam filled sweet croissants" class="img-fluid rounded p-2 border">
         </div>
     </div>
 </div>
